--- a/bootstrap-3.3.7/less/product-card-info.less
+++ b/bootstrap-3.3.7/less/product-card-info.less
@@ -54,11 +54,12 @@
         list-style-type: none;
         
         li {
+			position: relative;
+			top: 5px;            
             display: inline-block;
-//            background-color: red;
-            
+			
             font-family: 'icomoon' !important;
-            font-size: 22px;
+            font-size: 15px;
             font-style: normal;
             font-weight: normal;
             font-variant: normal;
